fix remove scrollbar on unicorn sidebar

--- a/src/views/unicorn/unicorn-layout/unicorn-layout.module.scss
+++ b/src/views/unicorn/unicorn-layout/unicorn-layout.module.scss
@@ -21,14 +21,11 @@
 .sidebar {
 	@include from($tablet) {
 		top: $spacing * 8;
-		overflow: auto;
-		height: calc(100vh - 6rem);
 		min-width: 320px;
 
 		width: 1px;
 		flex-grow: 1;
 		position: sticky;
 		align-self: flex-start;
-		overflow: auto;
 	}
 }
